works with latest drone