@@ -160,7 +160,6 @@
           <configuration>
             <groups>${test.groups}</groups>
             <redirectTestOutputToFile>false</redirectTestOutputToFile>
-            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
             <systemPropertyVariables>
               <browser>${browser}</browser>
             </systemPropertyVariables>
